--- a/style.css
+++ b/style.css
@@ -26,12 +26,16 @@ body {
 }
 
 h1 {
+    font-size: 4.5vw;
+    margin: 1vw;
     text-transform: uppercase;
     letter-spacing: 4px;
     text-align: center;
 }
 
 h2 {
+    font-size: 3.5vw;
+    margin: 1vw;
     text-transform: uppercase;
     letter-spacing: 4px;
     text-align: center;
@@ -43,9 +47,11 @@ h2 {
 }
 
 .socialMedia a {
+    width: 12vw;
+    height: 5vh;
     text-decoration: none;
     color: white;
-    font-size: 24px;
+    font-size: 4vw;
     padding: 1rem 4rem;
     border: 1px solid white;
     min-width: 4rem;
@@ -80,13 +86,12 @@ h2 {
 }
 
 .checkbox {
-    display: none;
+    position: absolute;
     height: 10vh;
     width: 10vw;
-    position: absolute;
     top: 0;
     right: 10px;
-    display: flex;
+    display: inline;
     justify-content: center;
     cursor: pointer;
     z-index: 9999;
@@ -94,12 +99,12 @@ h2 {
 }
 
 .checkbox .trace {
-    display: none;
+    position: absolute;
     width: 8vw;
     height: 0.5vh;
     background-color: white;
-    position: absolute;
     border-radius: 0.4vh;
+    display: none;
     transition: 0.5s ease-in-out;
 }
 
@@ -127,24 +132,23 @@ h2 {
 .menu {
     visibility: visible;
     position: absolute;
-    background: linear-gradient(-45deg, #0F2027, #203A43, #2C5364);
-    background-size: 300% 300%;
-    box-shadow: 0px 0px 15px 1px black;
+    width: 100vw;
+    height: 8%;
     top: 0px;
     right: 0px;
     display: flex;
+    background: linear-gradient(-45deg, #0F2027, #203A43, #2C5364);
+    background-size: 300% 300%;
+    box-shadow: 0px 0px 15px 1px black;
     opacity: 100%;
-    height: 8%;
-    max-height: 80px;
-    width: 100vw;
     transition: 400ms ease-in-out 0s;
     animation: backgroundTransition 8s ease-in-out infinite;
 }
 
 .menuItens {
+    top: 10vh;
     display: flex;
     justify-content: space-around;
-    top: 10vh;
     align-items: center;
 }
 
@@ -158,29 +162,29 @@ h2 {
 
 .menuItensLista li:nth-child(1) {
     position: absolute;
-    justify-content: center;
-    text-align: center;
     padding: 0;
     left: 33vw;
     right: 50vw;
+    justify-content: center;
+    text-align: center;
 }
 
 .menuItensLista li:nth-child(2) {
     position: absolute;
-    justify-content: center;
-    text-align: center;
     padding: 0;
     left: 48vw;
     right: 50vw;
+    justify-content: center;
+    text-align: center;
 }
 
 .menuItensLista li:nth-child(3) {
     position: absolute;
-    justify-content: center;
-    text-align: center;
     padding: 0;
     left: 63vw;
     right: 50vw;
+    justify-content: center;
+    text-align: center;
 }
 
 .menuItensLista li a {
@@ -196,9 +200,9 @@ h2 {
 /* HOME */
 
 .container {
-    background-color:beige ;
     width: 100vw;
     height: auto;
+    background-color: beige;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -207,15 +211,15 @@ h2 {
 }
 
 .cardContainer {
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: 90%;
 }
 
 .card {
-    height: 300px;
     width: 400px;
+    height: 300px;
     margin: 3rem 0 0;
     background-image: url("background image.jpg");
     background-position: center;
@@ -238,18 +242,18 @@ h2 {
 }
 
 .cardWrapper {
-    text-align: center;
+    position: relative;
     display: flex;
     flex-direction: column;
+    text-align: center;
     justify-content: center;
     align-items: center;
-    position: relative;
 }
 .cardWrapper::before{
-    content: "";
     position: absolute;
-    height: 100px;
+    content: "";
     width: 100px;
+    height: 100px;
     display: block;
     border: 1px solid white;
     opacity: 0;
@@ -291,8 +295,8 @@ h2 {
 
 /* FOOTER */
 .footer {
-    height: 50px;
     width: 100%;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -300,32 +304,41 @@ h2 {
 }
 
 /* RESPONSIVO */
-
+@media (min-width: 1600px) {
+    .socialMedia a{
+        padding: 2vw 5vw;
+    }
+}
 @media (max-width: 800px) { 
+
     /* HEADER */
 
-    header .h1 {
+    .nome {
         font-size: 6vw;
     }
 
-    header .h2 {
-        font-size: 5vw;
+    .funcao {
+        font-size: 4vw;
     }
+
     .socialMedia {
         display: flex;
         flex-direction: column;
+    }
+
+    .socialMedia a {
+        font-size: 6vw;
     }
 
     /* MENU */
 
     .menu {
         position: absolute;
-        display: flex;
-        visibility: visible;
-        z-index: 1;
         width: 0px;
         height: 100vh;
         max-height: none;
+        display: flex;
+        visibility: visible;
         transition: 400ms ease-in-out 0.03s;
     }
 
@@ -340,13 +353,13 @@ h2 {
     }
 
     .menuItensLista {
-        display: none;
         position: relative;
+        display: none;
         height: 100vh;
+        top: -8vh;
         flex-direction: column;
         justify-content: space-around;
         padding-left: 13vw;
-        top: -8vh;
         transition: 400ms ease-in-out 0.05s;
     }
 
@@ -423,8 +436,8 @@ h2 {
     }
 
     .card {
-        height: 250px;
         width: 250px;
+        height: 250px;
     }
 
     .cardText {
@@ -434,7 +447,7 @@ h2 {
     }
 
     .card:hover > .cardWrapper::before {
-        height: 190px;
         width: 190px;
+        height: 190px;
     }
 }
